--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: kevinwong@u.northwestern.edu
   facebook:
   flickr:
-  github: github.com/kphaser
+  github: kphaser
   instagram:
-  linkedin: https://www.linkedin.com/in/kphaser
+  linkedin: kphaser
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: kphaser
